--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.3.0",
+    "next": "13.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
